<resources>
    <string name="app_name">SaveUrFile</string>
    <string name="title">Filename</string>
    <string name="note">Text</string>
    <string name="internalSave">Save Internally</string>
    <string name="save_file">Save File</string>
    <string name="title_activity_file_browser">Explore Files</string>
    <string name="fileBrowser">Explore Files</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="explore_files">Explore Files</string>
    <string name="noFileChosen">You did not choose a file</string>
    <string name="successfullySavedInternally">Successfully saved internally</string>
    <string name="successfullySavedExternally">Successfully saved externally</string>
    <string name="savingError">SavingFileError: IOException</string>
    <string name="loadingError">LoadingFileError: IOException</string>
    <string name="loadingCacheError">LoadingCacheError: IOException</string>
    <string name="mainActivity">MainActivity</string>
    <string name="loadedFromCache">Loaded from cache: </string>
    <string name="savedToCache">Saved to cache: </string>
    <string name="cache">cache.txt</string>
    <string name="image">Image</string>
    <string name="text">Text</string>
    <string name="rename_file_or_folder">Rename</string>
    <string name="file_exists">File Exists</string>
    <string name="enter_a_name">Enter a name please.</string>
    <string name="enter_another_name">Enter a new name please.</string>
    <string name="untitled">Untitled</string>
    <string name="name_file">Name File</string>
    <string name="new_folder">New Folder</string>
    <string name="dialog_ok">Okay</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="override_file">Override</string>
    <string name="move">Move</string>
    <string name="file_moved">File has been moved.</string>
    <string name="paste_file">Paste File</string>
    <string name="delete">Delete</string>
    <string name="select_file_or_folder">Select a file or folder:</string>
    <string name="select_drive_or_folder">Select a drive or folder:</string>
    <string name="select_drive_title">Take a Pick</string>
    <string name="you_must_select_a_drive">Select a drive first</string>
    <string name="failed">Failed</string>
    <string name="not_found">Not Found</string>
    <string name="not_readable">Not Readable</string>
    <string name="permissions_denied">Permissions Denied</string>
</resources>

