<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new_folder"
        android:orderInCategory="100"
        android:title="@string/new_folder"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rename"
        android:orderInCategory="100"
        android:title="@string/rename_file_or_folder"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_move"
        android:orderInCategory="100"
        android:title="@string/move"
        app:showAsAction="never" />
</menu>
