<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/side_nav_bar"
    tools:context="de.tu_chemnitz.mi.android2.urnote.MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/white"
        android:text="@string/title"
        android:textStyle="bold"
        android:textAllCaps="true"/>


    <!--EditText is a user interface element for entering and modifying text.-->
    <!--ems = font size-->

    <ScrollView
        android:id="@+id/ScrollViewTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:scrollbars="vertical"
        android:background="@color/white"
        android:fillViewport="true">
        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:gravity="top|left"
            android:backgroundTint="@color/white"
            android:inputType="text"/>
    </ScrollView>

    <TextView
        android:id="@+id/textViewNote"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="@string/note"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:visibility="gone"
        android:background="@color/black"
        />


    <ScrollView
        android:id="@+id/ScrollViewNote"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.3"
        android:scrollbars="vertical"
        android:background="@color/white"
        android:fillViewport="true">

        <EditText
            android:id="@+id/editTextNote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="250dp"
            android:ems="10"
            android:gravity="top|left"
            android:backgroundTint="@color/white"
            android:inputType="textMultiLine"/>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/internalSaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:onClick="onClickInternalSave"
            android:text="@string/internalSave"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/externalSaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:onClick="onClickFileBrowser"
            android:text="@string/explore_files"
            android:textColor="@color/white" />

    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->

        <!--<Button-->
            <!--android:id="@+id/fileBrowserButton"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="5dp"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:background="@color/colorPrimary"-->
            <!--android:onClick="onClickFileBrowser"-->
            <!--android:text="@string/fileBrowser"-->
            <!--android:textColor="@color/white" />-->

    <!--</LinearLayout>-->

</LinearLayout>
